tests/compile-fail/fail5.stderr
error[E0277]: the trait bound `T: F` is not satisfied
 --> $DIR/fail5.rs:6:11
  |
6 |     union U<T>: F where T: Copy+'static = T;
  |           ^^^^ the trait `F` is not implemented for `T`
  |
note: required by a bound in `UVariant`
 --> $DIR/fail5.rs:6:17
  |
6 |     union U<T>: F where T: Copy+'static = T;
  |                 ^ required by this bound in `UVariant`
help: consider further restricting this bound
  |
6 |     union U<T>: F where T: Copy+'static + F = T;
  |                                         +++
